Refine endpoint & stream API
