# src/io_endpoint/endpoint_dispatcher.rs
@@ -11,17 +11,26 @@ impl EndpointDispatcher {
         EndpointDispatcher {}
     }
 
-    pub async fn get_all(&self, _peer_uid: &str) -> Vec<EndpointSpec> {
-        vec![self.get_endpoint("11-22-33", "44-55-66").await]
+    pub async fn get_all(&self, _network_uid: &str, _peer_uid: &str) -> Vec<EndpointSpec> {
+        vec![self.get_endpoint("11-22-33", "44-55-66", "77-88-99").await]
     }
 
-    pub async fn get_endpoint(&self, peer_uid: &str, endpoint_uid: &str) -> EndpointSpec {
+    pub async fn get_endpoint(
+        &self, network_uid: &str, peer_uid: &str, endpoint_uid: &str,
+    ) -> EndpointSpec {
         EndpointSpec {
+            endpoint_uri: format!(
+                "/networks/{network_uid}/peers/{peer_uid}/endpoints/{endpoint_uid}"
+            ),
+            //
+            network_uid: network_uid.into(),
             peer_uid: peer_uid.into(),
             endpoint_uid: endpoint_uid.into(),
+            //
             endpoint_type: EndpointType::SystemDevice,
             stream_direction: EndpointDir::Output,
             driver: EndpointDriver::Pipewire,
+            //
             display_name: "Display Name".into(),
             system_name: "system_name".into(),
         }
